Merging 1.3.8 back to trunk